DRIVERS: renamed C++ headers to .hh

--- a/drivers/Makefile.am
+++ b/drivers/Makefile.am
@@ -18,10 +18,10 @@ EXTRA_DIST=
 bsepcmdevice_alsa_la_SOURCES = bsepcmdevice-alsa.cc
 bsepcmdevice_alsa_la_LDFLAGS = -module $(drivers_ldflags)
 bsepcmdevice_alsa_la_LIBADD  = $(drivers_libs) $(ALSA_LIBS)
-EXTRA_DIST                  += bsepcmdevice-alsa.h
+EXTRA_DIST                  += bsepcmdevice-alsa.hh
 
 # Plugin bsemididevice-alsa
 bsemididevice_alsa_la_SOURCES = bsemididevice-alsa.cc
 bsemididevice_alsa_la_LDFLAGS = -module $(drivers_ldflags)
 bsemididevice_alsa_la_LIBADD  = $(drivers_libs) $(ALSA_LIBS)
-EXTRA_DIST                   += bsemididevice-alsa.h
+EXTRA_DIST                   += bsemididevice-alsa.hh
