--- a/plugins/evaluator/Makefile.am
+++ b/plugins/evaluator/Makefile.am
@@ -1,8 +1,4 @@
-# BEAST - Better Audio System
-# Copyright (C) 2003 Stefan Westerfeld
-# Copyright (C) 2000-2006 Tim Janik
-#
-## GNU Lesser General Public License version 2 or any later version.
+# BSE-Plugins - Better Sound Engine dynamic Plugins
 include $(top_srcdir)/Makefile.decl
 
 #
