--- a/drivers/bse-portaudio/configure.in
+++ b/drivers/bse-portaudio/configure.in
@@ -1,3 +1,4 @@
+dnl # Licensed GNU LGPL v2.1 or later: http://www.gnu.org/licenses/lgpl.html
 dnl ************************************
 dnl *** include special BEAST macros ***
 dnl ************************************
