DOCS: polish api doc name for doxygen

--- a/docs/dev/doxygen.cfg
+++ b/docs/dev/doxygen.cfg
@@ -1,4 +1,4 @@
-PROJECT_NAME		= "BEAST/BSE - Better Audio System and Sound Engine - Source Code"
+PROJECT_NAME		= "BEAST/BSE - Better Audio System and Sound Engine"
 OUTPUT_DIRECTORY	= doxyhtml/
 GENERATE_LATEX		= NO
 GENERATE_MAN		= NO
