--- a/configure.in
+++ b/configure.in
@@ -126,7 +126,9 @@ AC_C_CONST
 AC_C_INLINE
 AC_HEADER_STDC
 
-# == C++11 ==
+# == Compiler Flags ==
+MC_EVAR_ADD(CFLAGS, -Werror=format-security, -Werror=format-security)
+MC_EVAR_ADD(CXXFLAGS, -Werror=format-security, -Werror=format-security)
 MC_EVAR_ADD(CXXFLAGS, -std=gnu++0x, -std=gnu++0x -pthread)
 
 # Checks for programs
