BUILD: clean up INCLUDES, DEFS, AM_CXXFLAGS, link against librapicorn

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -3,11 +3,11 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS = gxk dialogs icons
 
-INCLUDES += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I. $(BEAST_CFLAGS) -DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN
-# -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_COMPAT_H
+INCLUDES    += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I.
+DEFS        += -DG_LOG_DOMAIN="\"BEAST\""
+AM_CXXFLAGS  = $(BEAST_CFLAGS) $(GXK_CFLAGS) $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE \
+			-DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN # -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_COMPAT_H
 
-# we specify the logging domain here
-DEFS += -DG_LOG_DOMAIN="\"BEAST\""
 
 # special profiling hooks
 PROFILE_SOURCE = # profile.cc
