--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -3,14 +3,10 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS =
 
-INCLUDES += -I$(top_srcdir) -I$(top_builddir) -I$(top_srcdir)/beast-gtk -I$(top_builddir)/beast-gtk -I$(srcdir) $(GXK_CFLAGS) # -I.. for <gxk/*.h> includes
-
-DEFS += $(strip \
-	-DGTK_DISABLE_COMPAT_H 	\
-	-DGXK_COMPILATION	\
-	-DG_LOG_DOMAIN=\"GXK\" 	\
-)
-# -DGTK_DISABLE_DEPRECATED -DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN
+INCLUDES    += -I$(top_srcdir) -I$(top_builddir) -I$(top_srcdir)/beast-gtk -I$(top_builddir)/beast-gtk -I$(srcdir) # -I.. for <gxk/*.h> includes
+DEFS        += -DGTK_DISABLE_COMPAT_H -DGXK_COMPILATION -DG_LOG_DOMAIN=\"GXK\" # -DGTK_DISABLE_DEPRECATED -DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN
+AM_CXXFLAGS  = $(GXK_CFLAGS) $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE
+AM_CFLAGS    = $(GXK_CFLAGS)
 
 noinst_LIBRARIES = libgxk.a
 
