--- a/launchers/Makefile.am
+++ b/launchers/Makefile.am
@@ -1,11 +1,9 @@
 # launchers - Beast program starters
 include $(top_srcdir)/Makefile.decl
 
-INCLUDES += -I$(top_srcdir) -I$(top_builddir) -I. $(LAUNCHER_CFLAGS) -DG_DISABLE_CONST_RETURNS
-
-DEFS += $(strip                         		\
-        -DBINDIR=\"$(bindir)\" 				\
-)
+INCLUDES    += -I$(top_srcdir) -I$(top_builddir) -I.
+DEFS        += -DBINDIR=\"$(bindir)\"
+AM_CXXFLAGS  = $(LAUNCHER_CFLAGS) -DG_DISABLE_CONST_RETURNS
 
 #
 # programs to build
