--- a/plugins/freeverb/Makefile.am
+++ b/plugins/freeverb/Makefile.am
@@ -1,7 +1,9 @@
 # Freeverb Makefile
 include $(top_srcdir)/Makefile.decl
 
-INCLUDES += -I$(top_srcdir) -I. $(BSE_CFLAGS) -DG_LOG_DOMAIN="\"$(strip $(basename $(<F)))\""
+INCLUDES    += -I$(top_srcdir) -I.
+DEFS        += -DG_LOG_DOMAIN="\"$(strip $(basename $(<F)))\""
+AM_CXXFLAGS  = $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE
 
 # install plugins under:
 plugindir = $(bseplugindir)
