--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -2,8 +2,9 @@
 include $(top_srcdir)/Makefile.decl
 
 SUBDIRS		= . tests
-INCLUDES       += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I. $(BIRNET_CFLAGS)
+INCLUDES       += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I.
 DEFS            = -DBIRNET_LOG_DOMAIN=\"BIRNET\" -D_BIRNET_SOURCE_EXTENSIONS
+AM_CXXFLAGS	= $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE $(BIRNET_CFLAGS)
 GLIB_MKENUMS    = glib-mkenums
 
 birnet_headers = $(strip 		\
@@ -45,7 +46,7 @@ libbirnetincludedir        = $(includedir)/birnet
 libbirnetinclude_HEADERS   = $(birnet_headers) $(birnet_generated_headers)
 libbirnet_la_SOURCES       = $(birnet_sources)
 libbirnet_la_DEPENDENCIES  =
-libbirnet_la_LIBADD        = $(BIRNET_LIBS) -lm
+libbirnet_la_LIBADD        = $(RAPICORN_LIBS) $(BIRNET_LIBS) -lm
 libbirnet_la_LDFLAGS       = -no-undefined # -Wl,-Bsymbolic
 # keep this .o rule in sync with the corresponding .la rule from Makefile.in
 libbirnet.o: $(libbirnet_la_OBJECTS) $(libbirnet_la_DEPENDENCIES)
