--- a/sfi/tests/Makefile.am
+++ b/sfi/tests/Makefile.am
@@ -7,8 +7,8 @@ DEFS	    += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN='"$(basename $(@F))"' -DPARANOID
 AM_CXXFLAGS  = $(SFI_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE
 
 noinst_PROGRAMS   = $(ALLTESTS)
-progs_nosfi_ldadd = $(top_builddir)/birnet/libbirnet.o $(SFI_LIBS) -lm
-progs_ldadd 	  = $(top_builddir)/birnet/libbirnet.o $(top_builddir)/sfi/libsfi.o $(SFI_LIBS) -lm
+progs_nosfi_ldadd = $(RAPICORN_LIBS) $(top_builddir)/birnet/libbirnet.o $(SFI_LIBS) -lm
+progs_ldadd 	  = $(top_builddir)/sfi/libsfi.o $(RAPICORN_LIBS) $(top_builddir)/birnet/libbirnet.o $(SFI_LIBS) -lm
 SFIDL 		  = $(top_builddir)/sfi/sfidl
 
 # ring
