--- a/configure.in
+++ b/configure.in
@@ -58,6 +58,12 @@ AC_SUBST(LT_RELEASE)
 AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_REVISION)
 AC_SUBST(LT_AGE)
+if test 1 = $(($BSE_MICRO_VERSION & 1)) ; then
+  DEFINE__FILE_DIR__='-D__FILE_DIR__=\"${abs_srcdir}\"'
+else
+  DEFINE__FILE_DIR__='-D__FILE_DIR__=\"beast/${subdir}\"'
+fi
+AC_SUBST(DEFINE__FILE_DIR__)
 
 dnl # figure debugging default, prior to $ac_help setup
 dnl
