--- a/tests/filecheck/Makefile.am
+++ b/tests/filecheck/Makefile.am
@@ -2,7 +2,7 @@
 include $(top_srcdir)/Makefile.decl
 
 INCLUDES    += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir)
-DEFS        += -DG_LOG_DOMAIN="\"BEAST-TEST\"" # -DG_DISABLE_CONST_RETURNS
+DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN="\"BEAST-TEST\"" # -DG_DISABLE_CONST_RETURNS
 AM_CXXFLAGS  = $(SFI_CFLAGS)
 
 SFIDL = $(top_builddir)/sfi/sfidl
