--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -4,14 +4,14 @@ include $(top_srcdir)/Makefile.decl
 SUBDIRS = gxk dialogs icons
 
 INCLUDES    += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I.
-DEFS        += -DG_LOG_DOMAIN="\"BEAST\""
+DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN="\"BEAST\""
 AM_CXXFLAGS  = $(BEAST_CFLAGS) $(GXK_CFLAGS) $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE \
 			-DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN # -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_COMPAT_H
 
 
 # special profiling hooks
 PROFILE_SOURCE = # profile.cc
-DEFS += # $(subst profile.cc, -pg -a, $(findstring profile.cc, $(<F)))
+DEFS += @DEFINE__FILE_DIR__@ # $(subst profile.cc, -pg -a, $(findstring profile.cc, $(<F)))
 LIBS += # -lefence # -pg 
 
 #
