--- a/launchers/Makefile.am
+++ b/launchers/Makefile.am
@@ -2,7 +2,7 @@
 include $(top_srcdir)/Makefile.decl
 
 INCLUDES    += -I$(top_srcdir) -I$(top_builddir) -I.
-DEFS        += -DBINDIR=\"$(bindir)\"
+DEFS        += @DEFINE__FILE_DIR__@ -DBINDIR=\"$(bindir)\"
 AM_CXXFLAGS  = $(LAUNCHER_CFLAGS) -DG_DISABLE_CONST_RETURNS
 
 #
