--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -4,7 +4,7 @@ include $(top_srcdir)/Makefile.decl
 SUBDIRS = icons . freeverb # evaluator
 
 INCLUDES    += -I$(top_srcdir) -I.
-DEFS        += -DG_LOG_DOMAIN="\"$(strip $(basename $(<F)))\""
+DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN="\"$(strip $(basename $(<F)))\""
 AM_CXXFLAGS  = $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE -D_BIRNET_SOURCE_EXTENSIONS
 
 # == IDL C++ Plugins ==
