BUILD: fix maintainer-clean

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,6 +14,7 @@ site site-preview site-update site-update-all site-update-pages site-update-gall
 
 # extra dependencies
 configure: birnet/acbirnet.m4 birnet/configure.inc
+MAINTAINERCLEANFILES += configure
 
 EXTRA_DIST += $(strip		\
 	TODO			\
